# argus-core

./: .gitignore  GITHUB_PREPARATION.md  PROJECT_STRUCTURE.md  README.md  RELEASE_WORKFLOW.md  TESTING.md  pyproject.toml  test_argus.py
.github/workflows/: release.yml
argus/: __init__.py  events.py  inspector.py  logger.py  storage.py  tracer.py
examples/: FAILURE_ANALYSIS.md  INSPECTOR_EXPLANATION.md  README.md  before_after_comparison.py  failure_demo.py  inspect_failure_trace.py  intervention_comparison.py  intervention_research_note.md  research_agent.py  tracer_example.py
